--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
 
 #container {
     display: grid;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     height: 100vh;
     grid-template-columns: 0.5fr 3fr;
     grid-template-rows: auto 1fr;
@@ -21,15 +22,14 @@
 }
 
 header {
+    background-color: #f0f9ff;
+    color: #082f49;
     display: grid;
     grid-column: 2 / 4;
     grid-template-columns: 3fr 1fr;
     padding: 10px;
 }
 
-.container > div {
-    grid-row: 2;
-}
 
 header > div {
     padding: 10px;
@@ -40,11 +40,24 @@ header > div {
     display: flex;
 }
 
+.search-container {
+    gap: 5px;
+}
+
 .searchbar {
     border: 1px solid #ccc;
     border-radius: 5px;
-    padding: 5px;
+    padding: 8px;
     width: 50%;
+}
+
+.mini-profile-container {
+    gap: 25px;
+}
+
+.name {
+    font-size: 22px;
+    font-weight: bold;
 }
 
 .profile-container {
@@ -58,6 +71,27 @@ header > div {
     display: flex;
     gap: 15px;
 }
+
+.name-container p {
+    font-size: 18px;
+}
+
+.buttons-container button {
+    background-color: #082f49;
+    border: 1px solid #082f49;
+    border-radius: 5px;
+    color: #f0f9ff;
+    font-weight: bold;
+    padding: 10px;
+    width: 90px;
+}
+
+.buttons-container button:hover {
+    cursor: pointer;
+    background-color: #0369a1;
+}
+
+
 
 .sidebar {
     grid-row: 1 / 4;
