--- a/styles.css
+++ b/styles.css
@@ -191,14 +191,27 @@ nav ul {
 }
 
 .announcements, .trending {
-    margin: 15px;
-    padding: 25px;
+    background-color: #075985;
+    border: 5px solid #082f49;
+    border-radius: 5px;
+    color: #f0f9ff;
+    margin: 20px 15px 15px 15px;
 } 
 
 .announcement {
     margin: 10px 0;
     padding: 10px;
-    width: 100%;
+    text-align: left;
+}
+
+.announcement h4 {
+    background-color: #38bdf8;
+    padding: 5px;
+    margin: 10px;
+}
+
+.announcement p {
+    padding: 5px;
 }
 
 .trending {
